--- a/template/deshboard.html
+++ b/template/deshboard.html
@@ -1,4 +1,42 @@
-{% extends 'base.html' %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">sSs</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about">about</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link" href="products" >
+            products Catagery
+          </a>
+          <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">electronics</a>
+            <a class="dropdown-item" href="#">girls fashion</a>
+            <a class="dropdown-item" href="#">vechele</a>
+            <a class="dropdown-item" href="#">Boys fashion</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div> -->
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact">contact</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <a class="btn btn-primary p-3 ml-3"  href=""><img src="static/imgs/user.png" > Your account</a>
+      </form>
+    </div>
+  </nav>
 
 {% block title %} Free Shopping {% endblock title %} 
 
@@ -306,6 +344,3 @@ allowPageScroll:"vertical"
 <!-- best selling products -->
 
 {% endblock body %} 
-
-
-
